ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scroll-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.scrollweb.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scroll-web-service
            port:
              number: 80
